Fix blue highlighting on double click on mobile devices

--- a/_css/ui.css
+++ b/_css/ui.css
@@ -28,3 +28,22 @@
 body {
   cursor: default;
 }
+
+*:focus {
+  outline: none !important; /* NOTE: this removes outline from bpm buttons */
+  -webkit-tap-highlight-color: transparent; /* NOTE: this removes outline from play/pause button */
+}
+
+body {
+  cursor: default;
+}
+
+.point:focus {
+    -webkit-tap-highlight-color: transparent;
+    user-select: none;
+}
+
+g, circle {
+    -webkit-tap-highlight-color: transparent; /* NOTE: this is doing nothing */
+    /* outline: 0 !important; */
+}
